kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deployment
spec:
  replicas: 1 #Estou a aplicar apenas 1 replica para este exemplo mas pode ser alterado. Idealmente, 3.
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
      - name: odoo
        image: odoo:18 #Estou a usar a imagem odoo:18 para ser específico. Pessoalmente, tento evitar o uso de latest, caso haja updates que possam quebrar a aplicação.
        ports:
          - containerPort: 8069
        volumeMounts:
          - name: odoo-conf-volume
            mountPath: /etc/odoo
      volumes:
        - name: odoo-conf-volume
          configMap:
            name: app-config
