kubernetes/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: postgres
        image: postgres:17
        ports:
          - containerPort: 5432
        volumeMounts: 
          - name: postgres-data
            mountPath: /var/lib/postgresql/data 
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc #Estou a referenciar o PVC que criei anteriormente.
