kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: odoo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - localapp.me
      secretName: secret-tls
  rules:
    - host: localapp.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo-service
                port:
                  number: 8069
